--- a/src/components/layout/content/content.module.css
+++ b/src/components/layout/content/content.module.css
@@ -1,14 +1,23 @@
 .navbar {
-    width: 100%;
-    height: 60px;
     background-color: red;
-  }
+    justify-content: center;
+    margin: auto;
+
+}
   
-  .mainContainer {
+.mainContainer {
     background-color: green;
     padding: 16px;
-    width: 100vw;
+    width: auto;
+    display: flex;
+    align-items: center;
   }
-  .profil-bio {
-    text-align: center;
+ .logImg {
+    border-radius: 16px;
+    padding: 4px;
+    width: 300px;
+    height: 250px;
   }
+@media screen and (min-width: 320px) {
+
+}
