--- a/src/components/layout/content/content.module.css
+++ b/src/components/layout/content/content.module.css
@@ -1,23 +1,27 @@
 .navbar {
-    background-color: red;
+    background-color: rgb(17, 13, 13);
     justify-content: center;
     margin: auto;
-
+    
+    flex-direction: column;
+    
+    
 }
   
 .mainContainer {
-    background-color: green;
+    background-color: rgb(6, 26, 6);
     padding: 16px;
     width: auto;
     display: flex;
-    align-items: center;
+    
+    
   }
  .logImg {
     border-radius: 16px;
     padding: 4px;
     width: 300px;
     height: 250px;
-  }
+ }
 @media screen and (min-width: 320px) {
 
 }
