--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -1,13 +1,13 @@
 .navbar {
     width: 100%;
     height: 60px;
-    background-color: red;
+    background-color: rgb(102, 100, 100);
   }
   
   .mainContainer {
-    background-color: purple;
+    background-color: rgb(14, 9, 14);
     padding: 16px;
-    width: 100vw;
+    width: 100;
   }
   .profilbio {
     text-align: center;
