--- a/src/components/layout/navbar/Navigationsbar.module.css
+++ b/src/components/layout/navbar/Navigationsbar.module.css
@@ -21,3 +21,13 @@
     display: block;
   }
 }
+.myBtn {
+  padding: 4px 8px;
+  border-radius: 8px;
+  color: white;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+  &:hover {
+    background-color: var(--primary-color);
+  }
+}
