--- a/src/components/layout/navbar/navbar-right/NavBarRight.module.css
+++ b/src/components/layout/navbar/navbar-right/NavBarRight.module.css
@@ -21,3 +21,13 @@
       margin-top: 0px;
     }
   }
+  .myBtn {
+    padding: 4px 8px;
+    border-radius: 8px;
+    color: white;
+    background-color: var(--secondary-color);
+    cursor: pointer;
+    &:hover {
+      background-color: var(--primary-color);
+    }
+  }
