neue Featers neue Pages vorbereitet  Impressum, sign_up
außerversehen alles hier gemacht und nicht om neuen Brunch
erste versuche mein sign in bottem  mit Link hinzuzufügen bis jetzt Läd er meine app.js neu

--- a/src/components/layout/navbar/Navigationsbar.module.css
+++ b/src/components/layout/navbar/Navigationsbar.module.css
@@ -24,7 +24,7 @@
 .myBtn {
   padding: 4px 8px;
   border-radius: 8px;
-  color: white;
+  color: rgb(92, 66, 66);
   background-color: var(--secondary-color);
   cursor: pointer;
   &:hover {
