--- a/src/components/layout/navbar/navbar-right/NavBarRight.module.css
+++ b/src/components/layout/navbar/navbar-right/NavBarRight.module.css
@@ -31,3 +31,13 @@
       background-color: var(--primary-color);
     }
   }
+  .m {
+    padding: 4px 8px;
+    border-radius: 8px;
+    color: white;
+    background-color: var(--secondary-color);
+    cursor: pointer;
+    &:hover {
+      background-color: var(--primary-color);
+    }
+  }
