--- a/src/components/styles/Variables.css
+++ b/src/components/styles/Variables.css
@@ -2,5 +2,5 @@
     --background-color: white;
     --primary-color: #0072c6;
     --secondary-color: #dabb7b;
-    --border-color: #222;
+    --border-color: #0c0b0b;
   }
