--- a/src/components/layout/content/content.module.css
+++ b/src/components/layout/content/content.module.css
@@ -1,27 +1,25 @@
 .navbar {
-    background-color: rgb(188, 54, 54);
-    justify-content: center;
-    margin: auto;
-    
-    flex-direction: column;
-    
-    
+  background-color: rgb(188, 54, 54);
+  justify-content: center;
+  margin: auto;
+  flex-direction: column;
 }
-  
-.mainContainer {
+@media screen and (min-width: 320px) {
+  .mainContainer {
     background-color: rgb(249, 249, 249);
     padding: 16px;
     width: auto;
     display: flex;
-    
-    
+    flex-direction: row;
   }
- .logImg {
-    border-radius: 16px;
-    padding: 4px;
-    width: 300px;
-    height: 250px;
- }
-@media screen and (min-width: 320px) {
-
 }
+.logImg {
+  border-radius: 16px;
+  padding: 4px;
+  width: 250px;
+  height: 250px;
+}
+@media screen and (min-width: 320px) {
+}
+
+
